<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de Sesión</string>
    <string name="label_register">REGISTRO</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_name">Nombre Completo</string>
    <string name="btn_register">Confirmar  Registro</string>
    <string name="label_go_to_login">¿Ya tinenes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar Sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción:</string>
    <string name="label_specialty">Especialidad:</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico:</string>
    <string name="label_scheduled_date">Fecha para la cita:</string>
    <string name="btn_confirm">"Confirmar "</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita médica #%1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presiones una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">Estás seguro que deseas salir</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderán</string>
    <string name="dialog_create_appointment_exit_positive_btn">Sí,, salir</string>
    <string name="dialog_create_appointment_exit_negative_bt">Continuar con el registro</string>
    <string name="validate_appointment_description">La descripción es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita:</string>
    <string name="label_confirm_appointment_data">Confirmar datos de la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_loading_specialties">Ocurrió un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrió un problema al cargar los médicos</string>

</resources>
